fixed login/register input being too wide

--- a/src/pages/css/LoginPage.module.css
+++ b/src/pages/css/LoginPage.module.css
@@ -16,3 +16,7 @@
     margin-bottom: 0px;
     text-align: center;
 }
+
+.formGroup input {
+    width: 300px;
+}
