--- a/src/pages/css/RegisterPage.module.css
+++ b/src/pages/css/RegisterPage.module.css
@@ -11,3 +11,7 @@
     align-items: center;
     margin-bottom: 15px;
 }
+
+.formGroup input {
+    width: 300px;
+}
